--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.21",
     "multer": "^1.4.2",
+    "multer-aliyun-oss": "^1.1.0",
     "svg-captcha": "^1.4.0"
   }
 }
